# Letter-Dispatch-Unit

./: newLocations.txt  random.html
code/: CMakeCache.txt  CMakeLists.txt  Date.h  LDS  LetterDatabase.cpp  LetterDatabase.h  Letter_status.cpp  Letter_status.h  Makefile  a.out  addletter.cpp  addletter.h  admin.cpp  admin.h  all_letters1.txt  allmembers.txt  cities.txt  cmake_install.cmake  complain.cpp  complain.h  complains.txt  error.h  generateReport.cpp  generateReport.h  instituteMemberDatabase.cpp  instituteMemberDatabase.h  login.cpp  main  password.h  payment.cpp  payment.h  payments.txt  post_letter.cpp  post_letter.h  trt.cpp  updateDataBase.cpp  updateDataBase.h  util.h
docs/: Test_8_20_11 (1) (1).docx  srs-20.docx
text classification/: Text Classification.ipynb
